# rvc-eval

./: .flake8  .gitignore  .gitmodules  Pipfile  README.md  cspell.config.yaml  setup.cfg
models/: .gitignore  PUT hubert_base.pt HERE.txt
rvc_eval/: cli.py  config.py  model.py  rvc_wrapper.py  vc_infer_pipeline.py
