[metadata]
name = rvc-eval
version = 0.1.0
author = esnya
description = Simplified evaluation of Retrieval-based Voice Conversion (RVC)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/esnya/rvc-eval
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    torch>=1.0.0
    numpy
    Pillow
    scipy
    librosa
    pyaudio
    fairseq
    praat-parselmouth
    resampy
python_requires = ==3.10.*

[options.packages.find]
exclude =
    tests
